...
                      'assets/images/IconoAPPMed.png',
                      height: isSmallScreen ? 100 : 50,
                      width:  isSmallScreen ? 100 : 50,
                    ),
                    SizedBox(height: ResponsiveLayout.getSpacing(context, 16)),
                    Text(
                      'Tu salud, nuestro mejor galardón.',
                      style: TextStyle(
                        fontSize: ResponsiveLayout.getFontSize(context, 20),
                        fontWeight: FontWeight.bold,
                        color: const Color.fromARGB(255, 18, 122, 95),
                      ),
                      textAlign: TextAlign.center,
...
                      onPressed: () async{
                        bool exist = await context.read<Proveedor>().buscarPaciente(numeroDePaciente.text);
                        if(exist){
                          Navigator.pushReplacementNamed(context, '/home');
                        }
                      },
                      child: const Text('Entrar'),
                    )
                  ],
                ),
              ),
            ),
          ),
...
          BottomNavigationBarItem(
            icon: Icon(Icons.medication, size: ResponsiveLayout.getIconSize(context, 24)),
            label: 'Medicación',
          ),
          BottomNavigationBarItem(
            icon: Icon(Icons.calendar_today, size: ResponsiveLayout.getIconSize(context, 24)),
            label: 'Tomas',
          ),
          BottomNavigationBarItem(
            icon: Icon(Icons.notifications, size: ResponsiveLayout.getIconSize(context, 24)),
            label: 'Alarmas',
          ),
        ],
        currentIndex: _selectedIndex,
        onTap: _onItemTapped,
      ),
      drawer: !isSmallScreen ? Drawer(
...
          ? Column(
              crossAxisAlignment: CrossAxisAlignment.start,
              children: [
                Padding(
                    padding: EdgeInsets.all(ResponsiveLayout.getSpacing(context, 16.0)),
                  child: Text(
                    'Medicamentos Actuales:',
                    style: TextStyle(
                      color: const Color.fromARGB(255, 41, 182, 145),
                      fontSize: ResponsiveLayout.getFontSize(context, 16),
                      fontWeight: FontWeight.bold,
                    ),
                  ),
...
          },
          style: ElevatedButton.styleFrom(
            minimumSize: const Size(double.infinity, 50),
            backgroundColor: const Color.fromARGB(255, 41, 182, 145),
          ),
          child: const Text(
            'Historial de medicamentos',
            style: TextStyle(color: Colors.white),
          ),
        ),
      ),
    );
  }
...
          body: Padding(
            padding: EdgeInsets.all(ResponsiveLayout.getSpacing(context, 16.0)),
            child: Column(
              crossAxisAlignment: CrossAxisAlignment.start,
              children: [
                Text(
                  'Recordatorios:',
                  style: TextStyle(
                    fontSize: ResponsiveLayout.getFontSize(context, 24),
                    fontWeight: FontWeight.bold,
                    color: const Color.fromARGB(255, 1, 169, 157),
                    decoration: TextDecoration.underline,
                    decorationColor: const Color.fromARGB(255, 1, 169, 157),
...
    showDialog(
      context: context,
      barrierDismissible: false,
      builder: (BuildContext context) {
        return AlertDialog(
          title: Text(
            'Confirmar toma',
            style: TextStyle(
                fontSize: ResponsiveLayout.getFontSize(context, 20)
            ),
        ),
          content: Text(
            '¿Confirmas que has tomado ${toma.name}?',
...
              onPressed: () {
                Navigator.of(context).pop();
              },
            ),
            TextButton(
              child: Text(
                'Confirmar',
                style: TextStyle(
                    fontSize: ResponsiveLayout.getFontSize(context, 14)
                ),
              ),
              onPressed: () async {
                try {
...
